--- a/index.html
+++ b/index.html
@@ -266,82 +266,122 @@ function showNotificationAndForm() {
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>نموذج تسجيل الطلاب</title>
+<title>نموذج تسجيل الطلاب - جامعة الملك فيصل</title>
 <style>
 body{margin:0;font-family:"Segoe UI",Tahoma,Arial,sans-serif;background:#f6fbf7;}
-input, select, textarea{width:100%;padding:10px;margin-bottom:6px;border-radius:8px;border:1px solid #e2e2e2;}
+a{cursor:pointer;text-decoration:none;color:#0b6b44;font-weight:bold;}
+.form-wrap{display:none; max-width:1200px; margin:24px auto; padding:24px; background:#fff; border-radius:12px; box-shadow:0 8px 30px rgba(0,0,0,0.1);}
+h2{color:#0b6b44;margin-bottom:12px;}
+p.subtitle{color:#6b6b6b;margin-bottom:20px;}
+fieldset{border:1px solid #e2e2e2; padding:16px; border-radius:10px; margin-bottom:18px;}
+legend{font-weight:bold;color:#08583a;}
+label{display:block;margin-bottom:6px;font-weight:600;color:#222;}
+input, select, textarea{width:100%;padding:10px;border-radius:8px;border:1px solid #e2e2e2;margin-bottom:6px;}
 textarea{resize:vertical;}
+.error{color:#c33;font-size:13px;display:none;}
 button{padding:10px 16px;border:none;border-radius:10px;font-weight:700;cursor:pointer;}
-#registrationForm{display:none;max-width:1200px;margin:20px auto;padding:30px;background:#fff;border-radius:12px;box-shadow:0 8px 20px rgba(0,0,0,0.1);}
-#registrationForm h2{text-align:center;color:#0b6b44;margin-top:0;}
-#registrationForm p{text-align:center;color:#666;margin-bottom:18px;}
-.grid2{display:grid;grid-template-columns:1fr 1fr;gap:12px;}
-#cancelFormBtn{margin-left:8px;background:#f1f1f1;}
-#submitBtn{background:#0b6b44;color:#ffd700;}
+.btn-primary{background:#0b6b44;color:#ffd700;}
+.btn-light{background:#f3f3f3;color:#222;}
 .preview-grid{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-bottom:20px;}
 .preview-img{background:#f7f7f7;height:120px;display:flex;align-items:center;justify-content:center;border-radius:8px;}
-.account-section{display:flex;align-items:center;gap:8px;margin-top:10px;}
-.account-section span{padding:10px 14px;border-radius:10px;background:#0b6b44;color:#ffd700;font-weight:700;}
+.success-modal{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:#fff;padding:24px;border-radius:12px;box-shadow:0 20px 60px rgba(0,0,0,0.18);display:none;width:420px;text-align:center;}
+.success-modal h3{margin-bottom:8px;color:#0b6b44;}
+.success-modal p{margin-bottom:14px;color:#444;}
 </style>
 </head>
 <body>
 
+<!-- زرك الحالي -->
+<button id="YOUR_BUTTON_ID" class="btn-primary">طلب جديد</button>
+
 <!-- الفورم -->
-<form id="registrationForm" action="https://formspree.io/f/meordlav" method="POST" enctype="multipart/form-data">
-<h2>نموذج تسجيل الطلاب</h2>
-<p>املئي الحقول المطلوبة بدقة ثم أرسلي الطلب.</p>
+<div id="registrationForm" class="form-wrap" aria-hidden="true">
+<h2>نموذج تسجيل الطلاب - جامعة الملك فيصل</h2>
+<p class="subtitle">املئي جميع البيانات بدقة. الحقول الموسومة بـ * مطلوبة.</p>
 
-<!-- البيانات الشخصية -->
-<div class="grid2">
-<div>
+<fieldset>
+<legend>البيانات الشخصية</legend>
 <label>الاسم الكامل (رباعي) *</label>
-<input type="text" name="fullName" required>
-<label>الجنس *</label>
-<select name="gender" required>
-<option value="">اختر...</option><option>ذكر</option><option>أنثى</option>
-</select>
-<label>الجنسية *</label>
-<select name="nationality" required>
-<option value="">اختر...</option><option>سعودي / سعودية</option><option>مصري</option><option>سوري</option><option>هندي</option><option>باكستاني</option><option>أخرى</option>
-</select>
-<label>رقم الهوية / الإقامة *</label>
-<input type="text" name="idNumber" required>
-</div>
-<div>
-<label>رقم الجوال *</label>
-<input type="text" name="phone" required>
-<label>البريد الإلكتروني *</label>
-<input type="email" name="email" required>
-<label>المدينة</label>
-<input type="text" name="city">
-<label>العنوان بالتفصيل</label>
-<textarea name="address"></textarea>
-</div>
-</div>
+<input type="text" id="fullName">
+<div class="error" id="err_fullName">يجب إدخال الاسم الرباعي.</div>
 
-<!-- البيانات الأكاديمية -->
-<div class="grid2" style="margin-top:12px;">
-<div>
+<label>الجنس *</label>
+<select id="gender">
+<option value="">اختر...</option>
+<option>ذكر</option>
+<option>أنثى</option>
+</select>
+<div class="error" id="err_gender">اختر النوع.</div>
+
+<label>الجنسية *</label>
+<select id="nationality">
+<option value="">اختر...</option>
+<option value="SA">سعودي / سعودية</option>
+<option value="EG">مصري</option>
+<option value="SY">سوري</option>
+<option value="IN">هندي</option>
+<option value="PK">باكستاني</option>
+<option value="OTHER">أخرى</option>
+</select>
+<div class="error" id="err_nationality">اختر الجنسية.</div>
+
+<label>رقم الهوية / الإقامة *</label>
+<input type="text" id="idNumber">
+<div class="error" id="err_idNumber">أدخل رقم الهوية أو الإقامة.</div>
+</fieldset>
+
+<fieldset>
+<legend>بيانات التواصل</legend>
+<label>رقم الجوال *</label>
+<input type="text" id="phone">
+<div class="error" id="err_phone">أدخل رقم جوال صالح.</div>
+
+<label>البريد الإلكتروني *</label>
+<input type="email" id="email">
+<div class="error" id="err_email">أدخل بريد إلكتروني صالح.</div>
+
+<label>المدينة</label>
+<input type="text" id="city">
+
+<label>العنوان بالتفصيل</label>
+<textarea id="address"></textarea>
+</fieldset>
+
+<fieldset>
+<legend>البيانات الأكاديمية</legend>
 <label>نوع المؤهل السابق *</label>
-<select name="prevDegree" required>
-<option value="">اختر...</option><option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option>
+<select id="prevDegree">
+<option value="">اختر...</option>
+<option>ثانوي</option>
+<option>دبلوم</option>
+<option>بكالوريوس</option>
+<option>ماجستير</option>
 </select>
+<div class="error" id="err_prevDegree">اختر نوع المؤهل.</div>
+
 <label>سنة التخرج *</label>
-<input type="number" name="gradYear" min="1900" max="2100" required>
+<input type="number" id="gradYear" min="1900" max="2100">
+<div class="error" id="err_gradYear">أدخل سنة التخرج الصحيحة.</div>
+
 <label>اسم المدرسة / الجامعة السابقة</label>
-<input type="text" name="prevInstitute">
+<input type="text" id="prevInstitute">
+
 <label>النسبة / المعدل</label>
-<input type="text" name="gpa">
-</div>
-<div>
+<input type="text" id="gpa">
+
 <label>التخصص المطلوب *</label>
-<input type="text" name="desiredMajor" required>
+<input type="text" id="desiredMajor">
+<div class="error" id="err_desiredMajor">أدخل التخصص المطلوب.</div>
+
 <label>نوع الدراسة *</label>
-<select name="studyType" required>
-<option>انتظام</option><option>انتساب</option><option>تعليم عن بعد</option>
+<select id="studyType">
+<option>انتظام</option>
+<option>انتساب</option>
+<option>تعليم عن بعد</option>
 </select>
+
 <label>الكليات / الأقسام</label>
-<select name="faculty">
+<select id="faculty">
 <option value="">اختر الكلية</option>
 <option>كلية الطب</option>
 <option>كلية الهندسة</option>
@@ -350,62 +390,70 @@ button{padding:10px 16px;border:none;border-radius:10px;font-weight:700;cursor:p
 <option>كلية إدارة الأعمال</option>
 <option>كلية الحاسبات</option>
 </select>
+</fieldset>
+
+<fieldset>
+<legend>رفع الملفات والدفع</legend>
+<label>رقم الحساب البنكي</label>
+<input type="text" readonly value="SA1980000857608010276380">
+<div style="margin-top:12px; display:flex; gap:8px; align-items:center;">
+<button id="copyAccountBtn" class="btn-light">نسخ رقم الحساب</button>
+<span style="padding:10px 14px; border-radius:10px; background:#0b6b44; color:#ffd700; font-weight:700;">رسوم الدفع: 1200 ريال</span>
 </div>
+</fieldset>
+
+<fieldset>
+<label><input type="checkbox" id="agree"> أقر بأن جميع البيانات المدخلة صحيحة وأتحمل مسؤولية أي معلومات غير صحيحة. *</label>
+<div class="error" id="err_agree">يجب الموافقة على الإقرار.</div>
+</fieldset>
+
+<div style="display:flex; gap:12px; margin-bottom:24px;">
+<button id="submitBtn" class="btn-primary">إرسال التسجيل</button>
+<button id="cancelBtn" class="btn-light">إلغاء</button>
 </div>
 
-<!-- رفع الملفات -->
-<div class="grid2" style="margin-top:12px;">
-<div>
-<label>صورة الهوية / الإقامة *</label>
-<input type="file" name="fileId" accept="image/*,application/pdf" required>
-<label>صورة الشهادة *</label>
-<input type="file" name="fileCertificate" accept="image/*,application/pdf" required>
+<div id="successModal" class="success-modal">
+<h3>تم استلام الطلب بنجاح</h3>
+<p>شكرًا لك! تم استلام بياناتك بنجاح. سيتم مراجعتها قريباً.</p>
+<button id="closeSuccess" class="btn-primary">حسناً</button>
 </div>
-<div>
-<label>صورة شخصية *</label>
-<input type="file" name="filePhoto" accept="image/*" required>
-<label>إيصال الدفع</label>
-<input type="file" name="fileReceipt" accept="image/*,application/pdf">
-</div>
-</div>
-
-<!-- رقم الحساب والرسوم -->
-<div class="account-section">
-<button type="button" onclick="navigator.clipboard.writeText('SA1980000857608010276380'); alert('تم نسخ رقم الحساب');">نسخ رقم الحساب</button>
-<span>رسوم الدفع: 1200 ريال</span>
-</div>
-
-<div style="margin-top:10px;">
-<label><input type="checkbox" name="agree" required> أقر بأن جميع البيانات المدخلة صحيحة.</label>
-</div>
-
-<div style="text-align:center;margin-top:18px;">
-<button type="submit" id="submitBtn">إرسال التسجيل</button>
-<button type="button" id="cancelFormBtn">إلغاء</button>
-</div>
-</form>
 
 <script>
-// ضع هنا id الزر الخاص بك
-const userBtnId = 'YOUR_BUTTON_ID'; 
-const btn = document.getElementById(userBtnId);
-const form = document.getElementById('registrationForm');
-const cancelBtn = document.getElementById('cancelFormBtn');
+// عرض الفورم عند الضغط على زرّك
+document.getElementById('YOUR_BUTTON_ID').addEventListener('click', e => {
+  e.preventDefault();
+  document.getElementById('registrationForm').style.display = 'block';
+});
 
-btn.addEventListener('click', e=>{e.preventDefault();form.style.display='block';form.scrollIntoView({behavior:'smooth'});});
-cancelBtn.addEventListener('click', ()=>{form.style.display='none';});
+// نسخ رقم الحساب
+document.getElementById('copyAccountBtn').addEventListener('click',()=>{navigator.clipboard.writeText("SA1980000857608010276380");alert("تم نسخ رقم الحساب");});
 
-form.addEventListener('submit', function(e){
-e.preventDefault();
-const fd = new FormData(form);
-fetch(form.action,{method:'POST',body:fd,headers:{'Accept':'application/json'}})
-.then(response=>{
-if(response.ok){alert('تم إرسال الطلب بنجاح. ستصلك رسالة تأكيد على بريدك.');form.reset();form.style.display='none';}
-else{alert('لم يتم إرسال الطلب — تحقق من الكونسول.');}
-})
-.catch(err=>{console.error(err);alert('حدث خطأ في الاتصال.');});
+// إغلاق الفورم أو المودال
+document.getElementById('cancelBtn').addEventListener('click',()=>{document.getElementById('registrationForm').style.display='none';});
+document.getElementById('closeSuccess').addEventListener('click',()=>{document.getElementById('successModal').style.display='none'; document.getElementById('registrationForm').style.display='none';});
+
+// التحقق من الحقول
+document.getElementById('submitBtn').addEventListener('click',()=>{
+let valid=true;
+['fullName','gender','nationality','idNumber','phone','email','prevDegree','gradYear','desiredMajor','agree'].forEach(id=>{
+  const el=document.getElementById(id);
+  const err=document.getElementById('err_'+id);
+  if(id==='agree'){if(!el.checked){err.style.display='block'; valid=false;} else{err.style.display='none'; return;}}
+  else if(!el.value){err.style.display='block'; valid=false;} else{err.style.display='none';}
+});
+if(valid){document.getElementById('successModal').style.display='block';}
+});
+
+// فتح نموذج DriveUploader في نافذة جديدة عند الضغط على زرّك
+const driveUploaderLink = 'https://driveuploader.com/upload/AJdYXmymWc/';
+document.getElementById('YOUR_BUTTON_ID').addEventListener('click', e=>{
+  e.preventDefault();
+  window.open(driveUploaderLink,'_blank');
 });
 </script>
+
+</body>
+    </html>
 </body>
 </html>
 
