--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ function showNotificationAndForm() {
             }, 1500);
 
 </script>
-<!-- نموذج التسجيل - مخفي افتراضياً -->
+    <!-- نموذج التسجيل - مخفي افتراضياً -->
 <div id="registrationFormContainer" style="display:none; max-width:1100px; margin:50px auto; background:#fff; border-radius:12px; padding:40px 50px; box-shadow:0 8px 25px rgba(0,0,0,0.1); direction:rtl;">
   <h2 style="text-align:center; color:#0b6b44; font-size:28px; margin-bottom:5px;">نموذج التسجيل - جامعة الملك فيصل</h2>
   <p style="text-align:center; color:#555; margin-bottom:30px; font-size:15px;">يرجى تعبئة جميع الحقول المطلوبة بدقة قبل الإرسال.</p>
@@ -377,7 +377,7 @@ function showNotificationAndForm() {
       <label><input type="checkbox" name="agree" required> أقر بأن جميع البيانات المدخلة صحيحة ومطابقة للوثائق الرسمية.</label>
     </div>
 
-    <div class="submit-area" style="text-align:center; margin-top:25px;">
+    <div style="text-align:center; margin-top:25px;">
       <button type="submit" style="background:#0b6b44; color:#fff; border:none; padding:12px 26px; border-radius:10px; font-size:16px; cursor:pointer; font-weight:600;">إرسال الطلب</button>
       <button type="reset" style="background:#aaa; color:#fff; border:none; padding:12px 26px; border-radius:10px; font-size:16px; cursor:pointer; font-weight:600;">إلغاء</button>
     </div>
@@ -401,7 +401,7 @@ function showNotificationAndForm() {
     else { alert('⚠️ لم يتم إرسال الطلب، تحقق من الاتصال أو إعداد Formspree.'); }
   });
 
-  // ربط أي زر يحتوي نص "طلب جديد" لفتح النموذج
+  // إظهار النموذج عند الضغط على أي زر "طلب جديد"
   document.querySelectorAll('button').forEach(btn => {
     if(btn.innerText.trim() === 'طلب جديد'){
       btn.addEventListener('click', function(){
