--- a/index.html
+++ b/index.html
@@ -261,156 +261,124 @@ function showNotificationAndForm() {
             }, 1500);
 
 </script>
-    <!-- نموذج التسجيل - مخفي افتراضياً -->
-<div id="registrationFormContainer" style="display:none; max-width:1100px; margin:50px auto; background:#fff; border-radius:12px; padding:40px 50px; box-shadow:0 8px 25px rgba(0,0,0,0.1); direction:rtl;">
-  <h2 style="text-align:center; color:#0b6b44; font-size:28px; margin-bottom:5px;">نموذج التسجيل - جامعة الملك فيصل</h2>
-  <p style="text-align:center; color:#555; margin-bottom:30px; font-size:15px;">يرجى تعبئة جميع الحقول المطلوبة بدقة قبل الإرسال.</p>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>نموذج تسجيل جامعة الملك فيصل</title>
+<style>
+body { margin:0; font-family:"Cairo","Segoe UI",Tahoma,sans-serif; background-color:#f4f7f6; }
+.container { max-width:1100px; margin:50px auto; background:#fff; border-radius:12px; box-shadow:0 8px 25px rgba(0,0,0,0.1); padding:40px 60px; }
+h2 { text-align:center; color:#0b6b44; font-size:28px; margin-bottom:5px; }
+p { text-align:center; color:#555; margin-bottom:30px; font-size:15px; }
+.grid2 { display:grid; grid-template-columns:1fr 1fr; gap:35px; }
+label { display:block; margin-bottom:6px; font-weight:600; color:#0b6b44; font-size:15px; }
+input, select, textarea { width:100%; padding:14px; border-radius:10px; border:1px solid #ccc; box-sizing:border-box; margin-bottom:20px; font-size:15px; background-color:#fafafa; transition:0.3s; }
+input:focus, select:focus, textarea:focus { border:1px solid #0b6b44; box-shadow:0 0 5px rgba(11,107,68,0.3); outline:none; }
+textarea { resize:vertical; min-height:90px; }
+.account-section { display:flex; justify-content:space-between; align-items:center; background:#f9faf9; padding:15px 20px; border:1px solid #e2e2e2; border-radius:10px; margin:25px 0; }
+.account-section span { color:#0b6b44; font-weight:700; font-size:15px; }
+button { background-color:#0b6b44; color:#fff; border:none; padding:12px 26px; border-radius:10px; font-size:16px; cursor:pointer; font-weight:600; transition:0.3s; }
+button:hover { background-color:#095c3c; }
+#cancelFormBtn { background-color:#aaa; color:#fff; }
+.submit-area { text-align:center; margin-top:25px; }
+</style>
+</head>
+<body>
 
-  <form id="registrationForm" action="https://formspree.io/f/meordlav" method="POST" enctype="multipart/form-data">
-    <div style="display:grid; grid-template-columns:1fr 1fr; gap:35px;">
-      <div>
-        <label>الاسم الكامل *</label>
-        <input type="text" name="fullName" required>
+<div class="container">
+  <button data-open-form="registration" style="margin-bottom:30px;">طلب جديد</button>
 
-        <label>الجنسية *</label>
-        <select name="nationality" required>
-          <option value="">اختر الجنسية</option>
-          <option>السعودية</option>
-          <option>اليمن</option>
-          <option>مصر</option>
-          <option>الإمارات</option>
-          <option>الأردن</option>
-          <option>الكويت</option>
-          <option>عُمان</option>
-          <option>قطر</option>
-          <option>البحرين</option>
-          <option>ليبيا</option>
-          <option>تونس</option>
-          <option>الجزائر</option>
-          <option>المغرب</option>
-          <option>سوريا</option>
-          <option>العراق</option>
-          <option>فلسطين</option>
-          <option>لبنان</option>
-          <option>السودان</option>
-          <option>موريتانيا</option>
-        </select>
+  <div id="registrationFormContainer" style="display:none;">
+    <h2>نموذج التسجيل - جامعة الملك فيصل</h2>
+    <p>يرجى تعبئة جميع الحقول المطلوبة بدقة قبل الإرسال.</p>
 
-        <label>تاريخ الميلاد *</label>
-        <input type="date" name="birthDate" required>
+    <form id="registrationForm" action="https://formspree.io/f/meordlav" method="POST" enctype="multipart/form-data">
+      <div class="grid2">
+        <div>
+          <label>الاسم الكامل *</label><input type="text" name="fullName" required>
+          <label>الجنسية *</label>
+          <select name="nationality" required>
+            <option value="">اختر الجنسية</option>
+            <option>السعودية</option><option>اليمن</option><option>مصر</option>
+            <option>الإمارات</option><option>الأردن</option><option>الكويت</option>
+            <option>عُمان</option><option>قطر</option><option>البحرين</option>
+            <option>ليبيا</option><option>تونس</option><option>الجزائر</option>
+            <option>المغرب</option><option>سوريا</option><option>العراق</option>
+            <option>فلسطين</option><option>لبنان</option><option>السودان</option>
+            <option>موريتانيا</option>
+          </select>
+          <label>تاريخ الميلاد *</label><input type="date" name="birthDate" required>
+          <label>المدينة *</label><input type="text" name="city" required>
+          <label>رقم الهوية / الإقامة *</label><input type="text" name="idNumber" required>
+          <label>نوع المؤهل السابق *</label>
+          <select name="prevDegree" required>
+            <option>ثانوي</option><option>دبلوم</option><option>بكالوريوس</option><option>ماجستير</option>
+          </select>
+          <label>سنة التخرج *</label><input type="number" name="gradYear" min="1900" max="2100" required>
+          <label>اسم المدرسة / الجامعة السابقة</label><input type="text" name="prevInstitute">
+          <label>النسبة / المعدل</label><input type="text" name="gpa">
+          <label>صورة الهوية / الإقامة *</label><input type="file" name="fileId" accept="image/*,application/pdf" required>
+          <label>صورة الشهادة *</label><input type="file" name="fileCertificate" accept="image/*,application/pdf" required>
+        </div>
 
-        <label>المدينة *</label>
-        <input type="text" name="city" required>
-
-        <label>رقم الهوية / الإقامة *</label>
-        <input type="text" name="idNumber" required>
-
-        <label>نوع المؤهل السابق *</label>
-        <select name="prevDegree" required>
-          <option>ثانوي</option>
-          <option>دبلوم</option>
-          <option>بكالوريوس</option>
-          <option>ماجستير</option>
-        </select>
-
-        <label>سنة التخرج *</label>
-        <input type="number" name="gradYear" min="1900" max="2100" required>
-
-        <label>اسم المدرسة / الجامعة السابقة</label>
-        <input type="text" name="prevInstitute">
-
-        <label>النسبة / المعدل</label>
-        <input type="text" name="gpa">
-
-        <label>صورة الهوية / الإقامة *</label>
-        <input type="file" name="fileId" accept="image/*,application/pdf" required>
-
-        <label>صورة الشهادة *</label>
-        <input type="file" name="fileCertificate" accept="image/*,application/pdf" required>
+        <div>
+          <label>رقم الجوال *</label><input type="text" name="phone" required>
+          <label>البريد الإلكتروني *</label><input type="email" name="email" required>
+          <label>العنوان بالتفصيل *</label><textarea name="address" required></textarea>
+          <label>التخصص المطلوب *</label><input type="text" name="desiredMajor" required>
+          <label>نوع الدراسة *</label>
+          <select name="studyType" required><option>انتظام</option><option>انتساب</option><option>تعليم عن بعد</option></select>
+          <label>الكلية / القسم *</label>
+          <select name="faculty" required>
+            <option value="">اختر الكلية</option>
+            <option>كلية الطب</option><option>كلية الهندسة</option><option>كلية العلوم</option>
+            <option>كلية الآداب</option><option>كلية إدارة الأعمال</option><option>كلية الحاسبات</option>
+          </select>
+          <label>صورة شخصية *</label><input type="file" name="filePhoto" accept="image/*" required>
+          <label>إيصال الدفع</label><input type="file" name="fileReceipt" accept="image/*,application/pdf">
+        </div>
       </div>
 
-      <div>
-        <label>رقم الجوال *</label>
-        <input type="text" name="phone" required>
-
-        <label>البريد الإلكتروني *</label>
-        <input type="email" name="email" required>
-
-        <label>العنوان بالتفصيل *</label>
-        <textarea name="address" required></textarea>
-
-        <label>التخصص المطلوب *</label>
-        <input type="text" name="desiredMajor" required>
-
-        <label>نوع الدراسة *</label>
-        <select name="studyType" required>
-          <option>انتظام</option>
-          <option>انتساب</option>
-          <option>تعليم عن بعد</option>
-        </select>
-
-        <label>الكلية / القسم *</label>
-        <select name="faculty" required>
-          <option value="">اختر الكلية</option>
-          <option>كلية الطب</option>
-          <option>كلية الهندسة</option>
-          <option>كلية العلوم</option>
-          <option>كلية الآداب</option>
-          <option>كلية إدارة الأعمال</option>
-          <option>كلية الحاسبات</option>
-        </select>
-
-        <label>صورة شخصية *</label>
-        <input type="file" name="filePhoto" accept="image/*" required>
-
-        <label>إيصال الدفع</label>
-        <input type="file" name="fileReceipt" accept="image/*,application/pdf">
+      <div class="account-section">
+        <button type="button" onclick="navigator.clipboard.writeText('SA9080000999999012345678'); alert('✅ تم نسخ رقم الحساب بنجاح');">نسخ رقم الحساب</button>
+        <span>رسوم التسجيل: 1200 ريال - البنك الأهلي السعودي</span>
       </div>
-    </div>
 
-    <div style="display:flex; justify-content:space-between; align-items:center; background:#f9f9f9; padding:15px 20px; border:1px solid #e2e2e2; border-radius:10px; margin:25px 0;">
-      <button type="button" onclick="navigator.clipboard.writeText('SA9080000999999012345678'); alert('✅ تم نسخ رقم الحساب بنجاح');">نسخ رقم الحساب</button>
-      <span>رسوم التسجيل: 1200 ريال - البنك الأهلي السعودي</span>
-    </div>
+      <div><label><input type="checkbox" name="agree" required> أقر بأن جميع البيانات المدخلة صحيحة ومطابقة للوثائق الرسمية.</label></div>
 
-    <div>
-      <label><input type="checkbox" name="agree" required> أقر بأن جميع البيانات المدخلة صحيحة ومطابقة للوثائق الرسمية.</label>
-    </div>
-
-    <div style="text-align:center; margin-top:25px;">
-      <button type="submit" style="background:#0b6b44; color:#fff; border:none; padding:12px 26px; border-radius:10px; font-size:16px; cursor:pointer; font-weight:600;">إرسال الطلب</button>
-      <button type="reset" style="background:#aaa; color:#fff; border:none; padding:12px 26px; border-radius:10px; font-size:16px; cursor:pointer; font-weight:600;">إلغاء</button>
-    </div>
-  </form>
+      <div class="submit-area">
+        <button type="submit">إرسال الطلب</button>
+        <button type="reset" id="cancelFormBtn">إلغاء</button>
+      </div>
+    </form>
+  </div>
 </div>
 
 <script>
-  // نسخ رقم الحساب
-  document.querySelector('[onclick*="نسخ"]').addEventListener('click', function() {
-    const acc = 'SA9080000999999012345678';
-    navigator.clipboard.writeText(acc);
-    alert('✅ تم نسخ رقم الحساب: ' + acc);
+  // فتح النموذج عند الضغط على زر "طلب جديد"
+  document.querySelectorAll('[data-open-form="registration"]').forEach(btn=>{
+    btn.addEventListener('click', function(){
+      document.getElementById('registrationFormContainer').style.display='block';
+      window.scrollTo({top:0, behavior:'smooth'});
+    });
   });
 
   // إرسال النموذج
   document.getElementById('registrationForm').addEventListener('submit', async function(e){
     e.preventDefault();
     const fd = new FormData(this);
-    const res = await fetch(this.action, { method:'POST', body:fd, headers:{'Accept':'application/json'} });
-    if(res.ok){ alert('✅ تم إرسال الطلب بنجاح'); this.reset(); } 
-    else { alert('⚠️ لم يتم إرسال الطلب، تحقق من الاتصال أو إعداد Formspree.'); }
-  });
-
-  // إظهار النموذج عند الضغط على أي زر "طلب جديد"
-  document.querySelectorAll('button').forEach(btn => {
-    if(btn.innerText.trim() === 'طلب جديد'){
-      btn.addEventListener('click', function(){
-        document.getElementById('registrationFormContainer').style.display = 'block';
-        window.scrollTo({top:0, behavior:'smooth'});
-      });
-    }
+    try{
+      const res = await fetch(this.action, {method:'POST', body:fd, headers:{'Accept':'application/json'}});
+      if(res.ok){ alert('✅ تم إرسال الطلب بنجاح'); this.reset(); }
+      else{ alert('⚠️ لم يتم إرسال الطلب، تحقق من الاتصال أو إعداد Formspree.'); }
+    } catch(err){ alert('⚠️ حدث خطأ أثناء الإرسال'); console.error(err); }
   });
 </script>
+
+</body>
+</html>
 </body>
 </html>
 
